# case_locations

./: .env.example  .gitignore  CLAUDE.md  NICO_LOOK_HERE.txt  Procfile  README.md  partnersds_schema.sql  pyproject.toml  render.yaml  requirements.txt  run_dashboard.bat  run_script.bat  run_script_2.bat  sync_nightly.bat
User_Inputs/: company_holidays.csv  employee_lkups.csv  revenue_goals.csv  teams.csv  tech_constants.csv
dashboard/: app.py  auth.py  config.py  run.py
dashboard/data/: airway_queries.py  cache.py  checkin_queries.py  collections_queries.py  design_queries.py  efficiency_processing.py  efficiency_store.py  notes_db.py  queries.py  refresh.py  remakes_queries.py  revenue_goals_store.py  transforms.py
dashboard/routes/: airway_hold.py  airway_workflow.py  collections.py  customers.py  daily_summary.py  efficiency.py  local_delivery.py  login.py  main_page.py  overdue_noscan.py  partials.py  remakes.py  sse.py  status.py  workload.py
dashboard/templates/: base.html  (+1 more)
scripts/: import_efficiency_history.py  populate_midday.py
sql_query/: AM_customers_all.sql  airway_hold_status_1.sql  airway_tasks_plan_export.sql  case_locs_1.sql  case_locs_airway_1.sql  cases_Prod_and_Invoiced.sql  cases_by_operator.sql  cases_submitted.sql  checkin_export.sql  daily_sales.sql  design_tasks_export.sql  efficiency_midday.sql  efficiency_tasks.sql  monthly_sales.sql  workload_pivot.sql  workload_pivot_2.sql
src/: date_parser.py  db_handler.py  email_handler.py  holidays.py  main.py  sheets_handler.py  workload_email_handler.py
sync/: mssql_to_postgres.py
(+31 files in other folders)
