[project]
name = "case-locations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.0",
    "google-auth>=2.42.1",
    "gspread>=6.2.1",
    "gspread-dataframe>=4.0.0",
    "jinja2>=3.1.6",
    "oauth2client>=4.1.3",
    "pandas>=2.3.3",
    "pyodbc>=5.3.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.0.0",
    "uvicorn[standard]>=0.34.0",
]
